<resources>
    <string name="app_name">Semana9Firebase1</string>
    <string name="btnlogin">LOGIN\n</string>
    <string name="btnregister">REGISTER</string>
    <string name="btnreg">REGISTER</string>
    <string name="hfullname">FullName</string>
    <string name="hcountry">Country</string>
    <string name="hemail">Email</string>
    <string name="hpassword">Password</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_listado">Listado</string>
    <string name="menu_cliente">Cliente</string>
    <string name="menu_pokemon">Pokemon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>