<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="239dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register" />

    <EditText
        android:id="@+id/txtfullname"
        android:layout_width="292dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hfullname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtpasswordregister"
        android:layout_width="292dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hpassword"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtemailreg" />

    <EditText
        android:id="@+id/txtemailreg"
        android:layout_width="292dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hemail"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcountry" />

    <EditText
        android:id="@+id/txtcountry"
        android:layout_width="292dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hcountry"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfullname" />

    <Button
        android:id="@+id/btnreg"
        android:layout_width="260dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnreg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpasswordregister" />

</androidx.constraintlayout.widget.ConstraintLayout>